fix(bs4): shrink lead text on smaller devices

--- a/src/client/stylesheets/style.scss
+++ b/src/client/stylesheets/style.scss
@@ -670,3 +670,10 @@ ul {
 		}
 	}
 }
+
+/* Match existing behaviour which shrinks lead paragraph size on smaller devices */
+@media (max-width: map-get($container-max-widths, "sm")) {
+    p.lead {
+        font-size: 1.0rem;
+    }
+}
